Add comprehensive testing suite with CI/CD workflows
Features added:
- Complete frontend test suite (25 tests, 18% coverage)
- Complete backend test suite (49 tests, 66% coverage)
- Working ./run-tests.sh script for unified testing
- Parallel CI/CD workflows (build.yml + test.yml)
- ESLint configuration and linting fixes
- Vitest configuration with coverage reporting
- Codecov integration for coverage tracking

Backend tests:
- Authentication module (79% coverage)
- Docker operations (78% coverage)
- Terminal operations (45% coverage)
- Integration testing with fixtures

Frontend tests:
- Terminal component functionality
- File operations and user data
- Integration tests with mocked backends
- Coverage reporting with detailed metrics

Infrastructure:
- .npmrc for consistent public registry usage
- Updated dependencies with security fixes
- GitHub Actions with parallel job execution
- README updated with actual test results

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Core
 .venv
 __pycache__
 .env
@@ -6,6 +7,12 @@ scratch/
 .react-router/
 backend/users.json
 frontend/build/
+
+# Testing
+.coverage
+coverage/
+coverage.xml
+pytest.ini
 
 # Logs
 logs
